# Cpp_BacktestTools

./: CMakeLists.txt  main.cpp  readme.txt
BackTester/: AppBase.h  BackTester.cpp  BackTester.h  BookBuilder.cpp  BookBuilder.h  BookUpdate.h  CMakeLists.txt  MDReader.h  MarketSimulator.cpp  MarketSimulator.h  Order.cpp  Order.h  OrderManager.cpp  OrderManager.h  TradingStrategy.cpp  TradingStrategy.h  my_unit_test.h
InputData/: Gasdata.csv
Unit_Test/: CMakeLists.txt
Unit_Test/tests/: CMakeLists.txt  unit_test.cpp
